--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <!-- bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
+    <script src="https://kit.fontawesome.com/4898b6255b.js" crossorigin="anonymous"></script>
+    <style>
+        .containerPost {
+            height: 100%;
+        }
+        
+        .post {
+            display: -webkit-box !important;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            white-space: normal;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        
+        .author {
+            width: 10%;
+            padding: auto;
+            margin-bottom: 10px;
+        }
+        /* .btn-style {
+            border: 1px solid rgb(29, 106, 201);
+            padding: 10px;
+            margin-bottom: 4px;
+            border-radius: 10px;
+        } */
+    </style>
+
 </head>
 
 <body>
@@ -26,7 +54,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">News</a>
+                                <h4 class="nav-link " aria-current="page">News</h4>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
@@ -51,44 +79,13 @@
     </header>
     <main>
         <!-- news card -->
-        <section>
-            <div class="container-fluid row row-cols-1 row-cols-lg-3 g-4 mt-4">
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
+        <section class="container">
+            <div id="news-container" class="container-fluid row row-cols-1 row-cols-lg-3 g-4 mt-4">
+
+            </div>
+
+
+
             </div>
         </section>
     </main>
