--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </nav>
         </section>
 
-        <section>
-            <ul id="all-category" class="nav">
+        <section class="container">
+            <ul id="all-category" class="nav flex-column flex-sm-row">
 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
