--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <h4 class="nav-link " aria-current="page">News</h4>
+                                <h4 class="nav-link text-primary" aria-current="page">News</h4>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Blog</a>
+                                <h4 id="blog" class="nav-link text-primary" aria-current="page">Blog</h4>
                             </li>
 
                         </ul>
@@ -69,9 +69,6 @@
         <section class="container">
             <ul id="all-category" class="nav flex-column flex-sm-row">
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
 
             </ul>
         </section>
@@ -88,6 +85,36 @@
 
             </div>
         </section>
+
+        <!-- modal -->
+        <section>
+
+            <!-- Button trigger modal -->
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="newsDetailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id="modal-details" class="modal-body">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+
     </main>
 
 
