--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
             </div>
         </section>
 
+        <!-- loader -->
+        <section id="loader" class="d-none">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border  text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+
         <!-- modal -->
         <section>
 
@@ -98,14 +107,16 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button>
+
                         </div>
                         <div id="modal-details" class="modal-body">
 
                         </div>
                         <div class="modal-footer">
+
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                     </div>
                 </div>
