--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@
             <div id="news-container" class="container-fluid row row-cols-1 row-cols-lg-3 g-4 mt-4">
 
             </div>
-
-
-
+            <div id="no-found-message" class="mt-4 d-none">
+                <h3 class="text-warning text-center ">No News Available</h3>
             </div>
+
+
+
+
         </section>
 
         <!-- loader -->
