--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
                                         <hr class="dropdown-divider">
                                     </li>
 
-
-
                                 </ul>
                     </div>
                 </div>
             </nav>
         </section>
+
 
         <section class="container">
             <ul id="all-category" class="nav flex-column flex-sm-row">
@@ -104,6 +103,10 @@
 
             </ul>
         </section>
+        <div class=" container input-group w-50 ">
+
+            <input id="item" type="text" class="form-control ml-4" placeholder="items" aria-label="Username" aria-describedby="addon-wrapping">
+        </div>
 
     </header>
     <main>
