--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
             padding: auto;
             margin-bottom: 10px;
         }
-        /* .btn-style {
-            border: 1px solid rgb(29, 106, 201);
-            padding: 10px;
-            margin-bottom: 4px;
-            border-radius: 10px;
-        } */
     </style>
 
 </head>
@@ -42,7 +36,7 @@
     <header>
 
 
-        <section class="container">
+        <section class="container mt-2">
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
@@ -173,5 +167,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
+<footer class="mt-5 bg-primary bg-opacity-50" style="height: 100px;">
+    <h3 class="text-center text-white fs-4 pt-5">Copyright 2021 News Portal</h3>
+
+</footer>
+
 
 </html>
