--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             padding: auto;
             margin-bottom: 10px;
         }
+        
+        .pos {
+            margin-top: 400px;
+        }
     </style>
 
 </head>
@@ -161,16 +165,26 @@
     </main>
 
 
+    <footer class="pos bg-primary bg-opacity-50 " style="height: 100px; ">
+        <h3 class="text-center text-white fs-4 pt-5">Copyright 2021 News Portal</h3>
+
+    </footer>
+
+
 
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
-</body>
-<footer class="mt-5 bg-primary bg-opacity-50" style="height: 100px;">
-    <h3 class="text-center text-white fs-4 pt-5">Copyright 2021 News Portal</h3>
 
-</footer>
+
+
+
+</body>
+
+
+
+
 
 
 </html>
